test/should-fail/vsgc1913.f3
/**
 * regression test: VSGC-1913 : Check that non-'abstract' has function body
 *
 * @test/compile-error
 */

abstract class Foo {
    function bar() : String
}
